--- a/Assignment1/about.html
+++ b/Assignment1/about.html
@@ -83,7 +83,8 @@
       <p>
         &copy; <span id="date"></span>
         <span class="footer-logo">Urmi's Recipes</span> Built by
-        Urmi Patel
+        <span class="footer-logo">Urmi Patel</span>
+        
       </p>
     </footer>
   </body>
