--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -122,7 +122,7 @@
       <p>
         &copy; <span id="date"></span>
         <span class="footer-logo">Urmi's Recipes</span> Built by
-        Urmi Patel
+        <span class="footer-logo">Urmi Patel</span>
       </p>
     </footer>
   </body>
