--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width-device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./resources/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
     <title>Urmi Patel Portfolio</title>
-    <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="imageStyle.css" />
+    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/imageStyle.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -60,7 +60,7 @@
     </section>
     <hr class="solid">
     <section id="aboutme" class="mb-5 p-5">
-      <h2 class="text-center color-darkblue mt-5 mb-5"><b>About Me</b></h2>
+      <h2 class="text-center color-darkblue mt-5 mb-5"><b>ABOUT ME</b></h2>
       <div class="home-row">
         <div id="aboutme-left">
           <div class="col-count-2">
@@ -70,11 +70,11 @@
             </p>
           </div>
           <button class="button-theme" id="button-resume">
-            <a class="a-tag" href="./resources/Patel Urmi.pdf" download="Urmi's_Resume">Resume</a>
+            <a class="a-tag" href="./assets/Patel Urmi.pdf" download="Urmi's_Resume">Resume</a>
           </button>
         </div>
         <div id="aboutme-right" >
-          <img class="profile-image" src="./resources/Profile.jpg" />
+          <img class="profile-image" src="./assets/Profile.jpg" />
         </div>
       </div>
     </section>
@@ -92,15 +92,15 @@
           <summary><b>Let's See Certificates</b></summary>
           <div class="gallery">
             <figure>
-                <img src="./resources/Specialization.jpg" alt="Certificate 1">
+                <img src="./assets/Specialization.jpg" alt="Certificate 1">
                 <figcaption>Google IT Automation with Python Professional Certificate</figcaption>
             </figure>
             <figure>
-              <img src="./resources/Machine Learning.png" alt="Certificate 2">
+              <img src="./assets/Machine Learning.png" alt="Certificate 2">
               <figcaption>Introduction to Machine Learning</figcaption>
             </figure>
             <figure>
-              <img src="./resources/PythonDataStructure.jpg" alt="Certificate 3">
+              <img src="./assets/PythonDataStructure.jpg" alt="Certificate 3">
               <figcaption>Python Data Structures</figcaption>
             </figure>
           </div>
@@ -138,14 +138,14 @@
         <div class="row-image-gallery">
           <div class="thumb-box">
             <a>
-              <img src="./resources/BISAG-N-Recruitment.png" alt="">
+              <img src="./assets/BISAG-N-Recruitment.png" alt="">
               <span class="main-title">BISAG-N</span>
               <span class="description">Application Developer</span>
             </a>
           </div>
           <div class="thumb-box">
             <a>
-              <img src="./resources/unnamed.png" alt="">
+              <img src="./assets/unnamed.png" alt="">
               <span class="main-title">Charusat University</span>
               <span class="description">Web App Developer </span>
             </a>
@@ -170,7 +170,7 @@
             <label html="message" class="form-label">message</label>
             <textarea name="message" id="message" class="form-textarea"></textarea>
           </div>
-          <audio id="sound1" src="./resources/pick-92276.mp3" preload="auto"></audio>
+          <audio id="sound1" src="./assets/audio.mp3" preload="auto"></audio>
           <button type="submit" class="button-theme" onclick="document.getElementById('sound1').play();">
             submit
           </button>
@@ -178,11 +178,11 @@
       </article>
     </section>
     <footer>
-      <img src="./resources/phone.gif"/>Contact: 
+      <img src="./assets/phone.gif"/>Contact: 
       <a class="color-darkblue" href="tel:+1 508-667-7726">+1 508-667-7726</a> |  
-      <img src="./resources/icons8-mail-48.png"/> Email:
+      <img src="./assets/icons8-mail-48.png"/> Email:
       <a class="color-darkblue" href="mailto:patel.nishig@northeastern.edu">patel.urmi@northeastern.edu</a> 
-      <img src="./resources/icons-linkedin.png"/></a>
+      <img src="./assets/icons-linkedin.png"/></a>
       <a class="color-darkblue" href="https://www.linkedin.com/in/urmipatel2001/">LinkedIn           
     </footer>
   </body>
