--- a/Assignment3/table.html
+++ b/Assignment3/table.html
@@ -24,7 +24,7 @@
       <tr>
         <td>
           <input type="checkbox" /><br /><br /><img
-            src="downarrow.png"
+            src="down.png"
             onClick="rowSelected(this)"
             width="25px"
           />
@@ -53,7 +53,7 @@
       <tr>
         <td>
           <input type="checkbox" /><br /><br /><img
-            src="downarrow.png"
+            src="down.png"
             onClick="rowSelected(this)"
             width="25px"
           />
@@ -82,7 +82,7 @@
       <tr>
         <td>
           <input type="checkbox" /><br /><br /><img
-            src="downarrow.png"
+            src="down.png"
             onClick="rowSelected(this)"
             width="25px"
           />
