--- a/Assignment7/Part_A/login.html
+++ b/Assignment7/Part_A/login.html
@@ -34,13 +34,12 @@
                 </div>
                 <div>
                     <label for="pass">Confirm Password</label>
-                    <input type="password" id="cpassword" name="password" required  placeholder="Please type your password in"><br>
-                    <span id="cerrorPassword"></span>
+                    <input type="password" id="confirm_password" name="password" required  placeholder="Please type your password in"><br>
+                    <span id="errorConfirmPassword"></span>
                 </div>
-                <input type="submit" class="button" id="submit" disabled><br><br>
+                <button type="submit" class="button" id="submit" disabled>Login</button>
             </form>
-            </div>
-            
+            </div> 
         </fieldset>
     </div>
 </body>
